--- a/index.html
+++ b/index.html
@@ -8,40 +8,36 @@
 	<title>Document !!</title>
 	<link rel="stylesheet" href="css/style.css">
 	<style>
-		li {
-			margin-bottom: 10px;
-		}
-
-		li button {
-			font-size: 8px;
-			margin-left: 20px;
-			color: #666;
-		}
+	
 	</style>
 </head>
 
 <body>
-	<h1>My shopping list</h1>
-
-	<div class="sss">
-		<label for="item">Enter a new item:</label>
-		<input type="text" name="item" id="item">
-		<button>Add item</button>
-	</div>
-
-	<ul>
-
-	</ul>
-
-	<script>
-		document.querySelector('.sss').addEventListener('mouseenter', () =>{
-			console.log('mouseenter')
-		} );
-		document.querySelector('.sss').addEventListener('mouseover', () =>{
-			 console.log('mouseover')
-			});
 
 	
+	<script>
+		
+	
+	let arr = [1, 2, 3];
+
+	function shuffle(arr){
+		const sorted = arr.sort(function(a,b){
+			 return Math.random()- 0.5;
+		})
+		return sorted;
+	}
+
+	console.log(shuffle(arr));
+	// arr = [3, 2, 1]
+
+	console.log(shuffle(arr));
+	// arr = [2, 1, 3]
+
+	console.log(shuffle(arr));
+	// arr = [3, 1, 2]
+	// ...
+
+
 	</script>
 </body>
 
