--- a/index.html
+++ b/index.html
@@ -16,29 +16,76 @@
 
 	
 	<script>
-		
+		// ## Array Cardio Day 2
 	
-	let arr = [1, 2, 3];
+		const people = [
+		  { name: 'Wes', year: 1988 },
+		  { name: 'Kait', year: 1986 },
+		  { name: 'Irv', year: 1970 },
+		  { name: 'Lux', year: 2015 }
+		];
+	
+		const comments = [
+		  { text: 'Love this!', id: 523423 },
+		  { text: 'Super good', id: 823423 },
+		  { text: 'You are the best', id: 2039842 },
+		  { text: 'Ramen is my fav food ever', id: 123523 },
+		  { text: 'Nice Nice Nice!', id: 542328 }
+		];
+	
+		// Some and Every Checks
+		// Array.prototype.some() // is at least one person 19 or older?
+		// const isAdult = people.some(function(person){
+		// 	const currentYear = (new Date()).getFullYear();
+		// 	if(currentYear - person.year >=19){
+		// 		return true;
+		// 	}
+		// })
 
-	function shuffle(arr){
-		const sorted = arr.sort(function(a,b){
-			 return Math.random()- 0.5;
-		})
-		return sorted;
-	}
 
-	console.log(shuffle(arr));
-	// arr = [3, 2, 1]
+		// const isAdult = people.some(person =>{
+		// 	const currentYear = (new Date()).getFullYear();
+		// 	return currentYear - person.year >=19;
+		// })
 
-	console.log(shuffle(arr));
-	// arr = [2, 1, 3]
-
-	console.log(shuffle(arr));
-	// arr = [3, 1, 2]
-	// ...
+		// const isAdult = people.some(person => ((new Date())
+		// .getFullYear()) - person.year >=19);
 
 
-	</script>
+		// console.log({isAdult});
+
+		
+		// Array.prototype.every() // is everyone 19 or older?
+		// const allAdults = people.every(person => ((new Date())
+		// .getFullYear()) - person.year >=19);
+
+
+		// console.log({allAdults});
+
+
+		// Array.prototype.find()
+		// Find is like filter, but instead returns just the one you are looking for
+		// find the comment with the ID of 823423
+
+		// const comment = comments.find(function(comment){
+		// 	if(comment.id === 823423 ){
+		// 		return true
+		// 	}
+		// });
+
+		// const comment = comments.find(comment => comment.id === 823423);
+
+		// console.log(comment);
+	
+		// Array.prototype.findIndex()
+		// Find the comment with this ID
+		// delete the comment with the ID of 823423
+
+		const index = comments.findIndex(comment => comment.id === 823423);
+		console.log(index);
+		// comments.splice(index, 1);
+		
+	  </script>
 </body>
 
 </html>
