--- a/index.html
+++ b/index.html
@@ -13,42 +13,83 @@
 </head>
 
 <body>
-
+	<div class="grid-container">
+		<div class="grid-item">
+		  <p>Odin 1</p>
+		  <img src="https://i.imgur.com/jkwFqfX.png" alt="top logo" />
+		</div>
+		<div class="grid-item">
+		  <p>Odin 2</p>
+		  <img src="https://i.imgur.com/jkwFqfX.png" alt="top logo" />
+		</div>
+		<div class="grid-item">
+		  <p>Odin 3</p>
+		  <img src="https://i.imgur.com/jkwFqfX.png" alt="top logo" />
+		</div>
+		<div class="grid-item">
+		  <p>Odin 4</p>
+		  <img src="https://i.imgur.com/jkwFqfX.png" alt="top logo" />
+		</div>
+		<div class="grid-item">
+		  <p>Odin 5</p>
+		  <img src="https://i.imgur.com/jkwFqfX.png" alt="top logo" />
+		</div>
+		<div class="grid-item">
+		  <p>Odin 6</p>
+		  <img src="https://i.imgur.com/jkwFqfX.png" alt="top logo" />
+		</div>
+		<div class="grid-item">
+		  <p>Odin 7</p>
+		  <img src="https://i.imgur.com/jkwFqfX.png" alt="top logo" />
+		</div>
+		<div class="grid-item">
+		  <p>Odin 8</p>
+		  <img src="https://i.imgur.com/jkwFqfX.png" alt="top logo" />
+		</div>
+		<div class="grid-item">
+		  <p>Odin 9</p>
+		  <img src="https://i.imgur.com/jkwFqfX.png" alt="top logo" />
+		</div>
+		<div class="grid-item">
+		  <p>Odin 10</p>
+		  <img src="https://i.imgur.com/jkwFqfX.png" alt="top logo" />
+		</div>
+	  </div>
 	
 	<script>
-		 const people = [
-		 	{
-				name: "Carly",
-				yearOfBirth: 2018,
-			},
-			{
-				name: "Ray",
-				yearOfBirth: 1962,
-				yearOfDeath: 1963,
-			},
+		//  const people = [
+		//  	{
+		// 		name: "Carly",
+		// 		yearOfBirth: 2018,
+		// 	},
+		// 	{
+		// 		name: "Ray",
+		// 		yearOfBirth: 1962,
+		// 		yearOfDeath: 1963,
+		// 	},
 
-			{
-				name: "Jane",
-				yearOfBirth: 1912,
-				yearOfDeath: 1941,
-			},
-		]
+		// 	{
+		// 		name: "Jane",
+		// 		yearOfBirth: 1912,
+		// 		yearOfDeath: 1941,
+		// 	},
+		// ]
 
-		const findTheOldest = function(arr) {
-			return arr.reduce(function(oldest, person){
-				if(person.yearOfDeath == undefined){
-					person.yearOfDeath = (new Date()).getFullYear();
-				} 
-				if(oldest.yearOfDeath == undefined){
-					oldest.yearOfDeath = (new Date()).getFullYear();
-				} 
-				const oldestAge = oldest.yearOfDeath - oldest.yearOfBirth;
-				const currentAge = person.yearOfDeath - person.yearOfBirth;
-				return (oldestAge < currentAge) ? person : oldest;
-			})
-		};
+		// const findTheOldest = function(arr) {
+		// 	return arr.reduce(function(oldest, person){
+		// 		if(person.yearOfDeath == undefined){
+		// 			person.yearOfDeath = (new Date()).getFullYear();
+		// 		} 
+		// 		if(oldest.yearOfDeath == undefined){
+		// 			oldest.yearOfDeath = (new Date()).getFullYear();
+		// 		} 
+		// 		const oldestAge = oldest.yearOfDeath - oldest.yearOfBirth;
+		// 		const currentAge = person.yearOfDeath - person.yearOfBirth;
+		// 		return (oldestAge < currentAge) ? person : oldest;
+		// 	})
+		// };
 
-		console.log(findTheOldest(people).name);
+		// console.log(findTheOldest(people).name);
 	
 	  </script>
 </body>
