--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 </head>
 
 <body>
-	<p>Some paragraph text</p>
+	<!-- <p>Some paragraph text</p>
     <h1>some heading 1 text</h1>
     <h2>some heading 2 text</h2>
 
     <button id="size-12">12</button>
     <button id="size-14">14</button>
-    <button id="size-16">16</button>
+    <button id="size-16">16</button> -->
 	
 	<script>
 		//  const people = [
@@ -59,21 +59,22 @@
 
 	
 
-		function makeSizer(size) {
-			// return function() {
-				document.body.style.fontSize = size + 'px';
-			// };
-		}
+// 		function makeSizer(size) {
+// 			// return function() {
+// 				document.body.style.fontSize = size + 'px';
+// 			// };
+// 		}
 
-var size12 = makeSizer(12);
-var size14 = makeSizer(14);
-var size16 = makeSizer(16);
+// var size12 = makeSizer(12);
+// var size14 = makeSizer(14);
+// var size16 = makeSizer(16);
 
-document.getElementById('size-12').onclick = size12;
-document.getElementById('size-14').onclick = size14;
-document.getElementById('size-16').onclick = size16;
+// document.getElementById('size-12').onclick = size12;
+// document.getElementById('size-14').onclick = size14;
+// document.getElementById('size-16').onclick = size16;
 
 	  </script>
+	  <script src="js/script.js"></script>
 </body>
 
 </html>
