--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 // document.getElementById('size-16').onclick = size16;
 
 	  </script>
-	  <script src="js/script.js"></script>
+	  <script type="module" src="js/script.js"></script>
 </body>
 
 </html>
