--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
     <button id="size-14">14</button>
     <button id="size-16">16</button> -->
 	
+
+	<input type="text" id="pokemonName" placeholder="Enter Pokemon Name" style="font-size: 24px; padding: 20px;">
+	<button onclick="fetchData()">Fetch Pokemon</button> <br>
+
+	<img src="" alt="pokemon" id="pokemonSprite" style="display: none;">
 	<script>
 		//  const people = [
 		//  	{
@@ -73,8 +78,10 @@
 // document.getElementById('size-14').onclick = size14;
 // document.getElementById('size-16').onclick = size16;
 
+
 	  </script>
-	  <script type="module" src="js/script.js"></script>
+	  <!-- <script type="module" src="js/script.js"></script> -->
+	  <script src="js/script.js"></script>
 </body>
 
 </html>
